# webdav_fs

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  rustfmt.toml
.augment/rules/: openspec-apply-change.md  openspec-archive-change.md  openspec-bulk-archive-change.md  openspec-continue-change.md  openspec-explore.md  openspec-ff-change.md  openspec-new-change.md  openspec-onboard.md  openspec-sync-specs.md  openspec-verify-change.md  opsx-apply-command.md  opsx-continue-command.md  opsx-new-command.md
.cursor/: README.md
.cursor/rules/: code-style.mdc  project-structure.mdc  rust-project.mdc  tests.mdc
.kiro/rules/: openspec-workflows.md
openspec/changes/optimize-states-module/: design.md  proposal.md  tasks.md
src/: internal.rs  lib.rs
src/internal/: entrance.rs  remote_file.rs  states.rs  webdav.rs
src/internal/auth/: structs.rs
src/internal/auth/structs/: webdav_auth.rs
src/internal/entrance/: lcoal.rs  remote.rs
src/internal/remote_file/: downloader.rs  structs.rs
src/internal/remote_file/downloader/: impl_traits.rs  structs.rs
src/internal/remote_file/structs/: remote_file.rs  remote_file_data.rs
src/internal/states/: lock_reactive.rs  queue_reactive.rs  reactive_core.rs  unlock_reactive.rs
src/internal/webdav/: enums.rs  functions.rs  raw_xml.rs  webdav.rs
src/internal/webdav/functions/: get_folders_raw_data.rs
src/tests/: .gitignore  internal.rs  lib.rs  mod.rs  vendors.toml
src/tests/env/: .env.example
src/tests/internal/: downloader.rs  get_remote_files.rs  reactive_performance.rs  reactive_property.rs  states_concurrent.rs
(+33 files in other folders)
